2024-03-01T01:08:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8104945632 # 162
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-01
* notice: last 14d: unq all: 2 20
* notice: prev accum: outdated-unq outdated-all / unq all: 762 1210 / 772 1228
* notice: next accum: outdated-unq outdated-all / unq all: 762 1210 / 773 1230
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-02-29]

2024-02-29T08:17:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8092967650 # 160
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-29
* notice: last 14d: unq all: 1 18
* notice: prev accum: outdated-unq outdated-all / unq all: 762 1210 / 771 1227
* notice: next accum: outdated-unq outdated-all / unq all: 762 1210 / 772 1228
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-29]

2024-02-29T01:02:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8089384320 # 159
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-29
* notice: last 14d: unq all: 1 17
* notice: prev accum: outdated-unq outdated-all / unq all: 762 1210 / 771 1226
* notice: next accum: outdated-unq outdated-all / unq all: 762 1210 / 771 1227
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-28]

2024-02-28T08:18:00Z: