@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-03-01T01:08:49Z",
+  "timestamp" : "2024-03-01T16:17:06Z",
   "count_outdated" : 1210,
   "uniques_outdated" : 762,
-  "count" : 1230,
-  "uniques" : 773,
+  "count" : 1231,
+  "uniques" : 774,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-03-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
