@@ -1,5 +1,5 @@
 {
-  "count": 20,
+  "count": 21,
   "uniques": 2,
   "clones": [
     {
@@ -51,6 +51,11 @@
       "timestamp": "2024-02-29T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-03-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
