@@ -1,3 +1,12 @@
+2024-03-01T16:17:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8114054285 # 164
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-01
+* notice: last 14d: unq all: 2 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 762 1210 / 773 1230
+* notice: next accum: outdated-unq outdated-all / unq all: 762 1210 / 774 1231
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-03-01]
+
 2024-03-01T01:08:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8104945632 # 162
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-01
